@@ -4,6 +4,9 @@ Change history
 Release Candidate 3
 ===================
 
+- Applied goodwill's patch fixing MR-212
+  "Script Helpers (e.g. $Scriptaculous) installscript function clear flash unexpected"
+
 - Applied Georges Benatti's patch 
   adding the attribute matchHostNameAndPath to the routing node on the configuration. 
   
